# hexinspector

./: BuzHash.rb  Makefile.am  README  configure.in  doxyfile  hexdump.rb  hexdumptest.rb  hexfile.rb  hexinspector.rb  libxdiff_bpatch.rb  load_test.rb
src/: Makefile.am  buzhash.h  hi.c  hi_buzhash.c  hi_diff.c  hi_diff.h  hi_file.c  hi_file.h  hi_ncurses.h  hi_ncurses_common.c  hi_ncurses_display.c  hi_ncurses_display.h  hi_ncurses_file_pager.c  hi_ncurses_help.c  hi_ncurses_highlight.c  hi_ncurses_highlight.h  hi_ncurses_location.c  hi_ncurses_main.c  hi_output.c  hi_output.h  hi_priv.h  hi_search.c  hi_search.h  macros.h  rabinkarp.h  test1.c
test/: .Substr_test.rb.swp  Substr_test.rb
testdata/: alpha_drop  alpha_replace  make_test_data.c
